# lakedoc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md
issues/: #1 Diagram 卡片转换问题.md
src/: main.py
src/lakedoc/: __init__.py
src/lakedoc/context/: __init__.py  base.py  lake.py  mod.py  mod.pyi
src/lakedoc/converters/: __init__.py  base.py  html_converter.py  md_converter.py  pdf_converter.py
src/lakedoc/converters/ht2md/: __init__.py  converter.py  converter.pyi
src/lakedoc/utils/: __init__.py  debug.py  errors.py  file.py  string.py
tests/: test_basic_convert.py  test_card_types.py  test_context.py  test_converters.py  test_debug_mode.py  test_diagram_as_code.py  test_errors.py  test_file_operations.py  test_html_convert.py  test_integration.py  test_string_operations.py
tests/articles/: 001.html  002.html  source.txt
