[project]
name = "lakedoc"
version = "1.1.1"
description = "Convert Lake documents (Yuque) into the specified format."
authors = [
  {name = "gupingan", email = "gupingan6@outlook.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "beautifulsoup4 (==4.12.3)",
  "colorama (==0.4.6)",
  "markdown (==3.4.4)",
  "pymdown-extensions (==10.0.1)",
]

[project.urls]
Repository = 'https://github.com/gupingan/lakedoc'
Homepage = 'https://github.com/gupingan/lakedoc'
Documentation = 'https://github.com/gupingan/lakedoc'

[tool.poetry]
packages = [{include = "lakedoc", from = "src"}]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[dependency-groups]
test = [
  "pytest (==7.4.4)",
  "pytest-cov (>=4.1.0)",
  "pytest-benchmark (>=4.0.0)",
]

# 测试配置
[tool.pytest.ini_options]
addopts = [
  "-v",
  "--strict-markers",
  "--cov=src/lakedoc",
  "--cov-report=term-missing",
  "--cov-report=html",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

# 覆盖率配置
[tool.coverage.run]
branch = true
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/ht2md/*"
]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
